--- a/facebook_checkins_baseline.ipynb
+++ b/facebook_checkins_baseline.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -54,8 +54,7 @@
     "    X_test = df_cell_test.values.astype(float)\n",
     "\n",
     "    #Applying the classifier\n",
-    "    clf = KNeighborsClassifier(n_neighbors=26, weights='distance', \n",
-    "                               metric='manhattan', n_jobs=2)\n",
+    "    clf = KNeighborsClassifier(n_neighbors=26, weights='distance', metric='manhattan')\n",
     "    clf.fit(X, y)\n",
     "    y_pred = clf.predict_proba(X_test)\n",
     "    pred_labels = le.inverse_transform(np.argsort(y_pred, axis=1)[:,::-1][:,:3]) \n",
@@ -104,7 +103,7 @@
     "    \n",
     "    #Writting to csv\n",
     "    ds_sub.name = 'place_id'\n",
-    "    ds_sub.to_csv('sub_knn.csv', index=True, header=True, index_label='row_id')  "
+    "    ds_sub.to_csv('/opt/devs/sub_knn.csv', index=True, header=True, index_label='row_id')  "
    ]
   },
   {
@@ -121,18 +120,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data ...\n",
+      "Preparing train data\n",
+      "Preparing test data\n",
+      "Row 1/20 elapsed time: 27.83 seconds\n",
+      "Row 2/20 elapsed time: 29.10 seconds\n",
+      "Row 3/20 elapsed time: 29.83 seconds\n",
+      "Row 4/20 elapsed time: 30.36 seconds\n",
+      "Row 5/20 elapsed time: 31.68 seconds\n",
+      "Row 6/20 elapsed time: 31.81 seconds\n",
+      "Row 7/20 elapsed time: 30.61 seconds\n",
+      "Row 8/20 elapsed time: 30.32 seconds\n",
+      "Row 9/20 elapsed time: 30.83 seconds\n",
+      "Row 10/20 elapsed time: 30.84 seconds\n",
+      "Row 11/20 elapsed time: 32.12 seconds\n",
+      "Row 12/20 elapsed time: 30.24 seconds\n",
+      "Row 13/20 elapsed time: 29.77 seconds\n",
+      "Row 14/20 elapsed time: 30.25 seconds\n",
+      "Row 15/20 elapsed time: 31.91 seconds\n",
+      "Row 16/20 elapsed time: 30.83 seconds\n",
+      "Row 17/20 elapsed time: 29.80 seconds\n",
+      "Row 18/20 elapsed time: 30.35 seconds\n",
+      "Row 19/20 elapsed time: 28.70 seconds\n",
+      "Row 20/20 elapsed time: 27.85 seconds\n",
+      "Generating submission file ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.5/site-packages/pandas/core/indexing.py:508: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[item_labels[indexer[info_axis]]] = value\n"
+     ]
+    }
+   ],
    "source": [
     "print('Loading data ...')\n",
     "\n",
-    "df_train = pd.read_csv('../input/train.csv',\n",
+    "df_train = pd.read_csv('/opt/devs/train_facebook.csv',\n",
     "                       usecols=['row_id','x','y','time','place_id'], \n",
     "                       index_col = 0)\n",
-    "df_test = pd.read_csv('../input/test.csv',\n",
+    "df_test = pd.read_csv('/opt/devs/test_facebook.csv',\n",
     "                      usecols=['row_id','x','y','time'],\n",
     "                      index_col = 0)\n",
     "\n",
@@ -170,6 +212,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "size = 10.0\n",
+    "x_step = 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 20)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range((int)(size/x_step))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -180,9 +256,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
